# video-processor

./: CMakeLists.txt  README.md  convert_model.py  convert_realesrgan.py
include/: adaptive_sharpening.h  camera.h  display.h  dnn_super_res.h  frame_buffer.h  pipeline.h  processor.h  selective_bilateral.h  temporal_consistency.h  timer.h  upscaler.h  video_enhancer.h
models/: RealESRGAN_x4plus_6B.onnx
src/: adaptive_sharpening.cpp  camera.cpp  display.cpp  dnn_super_res.cpp  frame_buffer.cpp  main.cpp  opencv_test  opencv_test.cpp  pipeline.cpp  processor.cpp  selective_bilateral.cpp  simple_camera_test  simple_camera_test.cpp  temporal_consistency.cpp  test_enhancements.cpp  test_phase2.cpp  test_phase4.cpp  timer.cpp  upscaler.cpp  video_enhancer.cpp
